<resources>
    <string name="app_name">Tut4</string>

    <string name="SQLite">SQLite</string>
    <string name="course">Type the course code here</string>
    <string name="number">Type the number of students here</string>
    <string name="level">Indicate undergrad or grad here</string>
    
    <string name="add">ADD</string>
    <string name="display">DISPLAY</string>
    <string name="delete">DELETE</string>
</resources>
